# drf-api-permissions-postgres

./: README.md  pyproject.toml  requirements.txt
drf_api_permissions_postgres/: settings.py  urls.py
post/: models.py  serializers.py  tests.py  views.py
post/migrations/: 0001_initial.py
